--- a/about.html
+++ b/about.html
@@ -625,39 +625,35 @@
       </section>
 
       <!-- Mission Section -->
-      <section class="about-sec-col py-8">
+      <section class="about-sec-col py-5">
         <div class="container">
+          <!-- Heading -->
           <div class="row justify-content-center mb-4">
             <div class="col-lg-8 text-center">
-              <h2 class="fw-bold display-5 mb-5" data-aos="fade-up">
+              <h2 class="fw-bold display-6 mb-3" data-aos="fade-up">
                 គោលដៅរបស់ពួកយើង
               </h2>
-              <p
-                class="text-muted mb-4"
-                data-aos="fade-up"
-                data-aos-delay="200"
-              >
+              <p class="text-muted" data-aos="fade-up" data-aos-delay="200">
                 យើងត្រូវបានប្តេជ្ញាក្នុងការប្រើប្រាស់បច្ចេកវិទ្យា
                 ដើម្បីផ្សព្វផ្សាយការយល់ដឹងអំពីការកែច្នៃកាកសំណល់
                 និងការរស់នៅប្រកបដោយចីរភាព។ គោលបំណងរបស់យើង
                 គឺជំរុញឲ្យសហគមន៍កាត់បន្ថយកាកសំណល់ ប្រើប្រាស់ធនធានម្តងទៀត
-                និងកែច្នៃឱ្យមានការទទួលខុសត្រូវ សម្រាប់អនាគតដែលស្អាតស្អំជាងនេះ។
+                និងកែច្នៃឱ្យមានការទទួលខុសត្រូវ សម្រាប់អនាគតស្អាតស្អំជាងនេះ។
               </p>
             </div>
           </div>
 
+          <!-- Mission Cards -->
           <div class="row g-4">
             <!-- Card 1 -->
-            <div class="col-6 col-md-4 m-auto" data-aos="zoom-in-right">
-              <div class="card h-100 shadow-sm border-0">
-                <div class="card-body text-center">
+            <div class="col-12 col-md-4" data-aos="zoom-in-right">
+              <div class="card h-100 shadow-sm border-0 hover-card">
+                <div class="card-body text-center p-4">
                   <div class="mb-3 text-success">
                     <i class="fa-solid fa-recycle fa-2x"></i>
                   </div>
-                  <h5 class="card-title fw-bold">
-                    ហេតុអ្វីត្រូវកែច្នៃកាកសំណល់?
-                  </h5>
-                  <p class="card-text text-secondary">
+                  <h5 class="fw-bold mb-3">ហេតុអ្វីត្រូវកែច្នៃកាកសំណល់?</h5>
+                  <p class="text-secondary">
                     ការកែច្នៃកាកសំណល់ ជួយកាត់បន្ថយមលស្អុយ សន្សំថាមពល
                     និងការពារពិភពលោករបស់យើង។
                   </p>
@@ -666,31 +662,31 @@
             </div>
 
             <!-- Card 2 -->
-            <div class="col-6 col-md-4 m-auto" data-aos="zoom-in-up">
-              <div class="card h-100 shadow-sm border-0">
-                <div class="card-body text-center">
+            <div class="col-12 col-md-4" data-aos="zoom-in-up">
+              <div class="card h-100 shadow-sm border-0 hover-card">
+                <div class="card-body text-center p-4">
                   <div class="mb-3 text-primary">
                     <i class="fa-solid fa-users fa-2x"></i>
                   </div>
-                  <h5 class="card-title fw-bold">អ្វីដែលយើងធ្វើ</h5>
-                  <p class="card-text text-muted">
-                    យើងបង្កើតវេទិកាឌីជីថល ដែលផ្តល់មាតិកាអប់រំ
+                  <h5 class="fw-bold mb-3">អ្វីដែលយើងធ្វើ</h5>
+                  <p class="text-secondary">
+                    យើងបង្កើតវេទិកាឌីជីថល ផ្តល់មាតិកាអប់រំ
                     គន្លឹះក្នុងការកែច្នៃកាកសំណល់
-                    និងឧបករណ៍ដើម្បីធ្វើឱ្យទម្លាប់ប្រកបដោយមិត្តភាពបរិស្ថានកាន់តែងាយស្រួល។
+                    និងឧបករណ៍ដើម្បីធ្វើឱ្យទម្លាប់ប្រកបដោយបរិស្ថានកាន់តែងាយស្រួល។
                   </p>
                 </div>
               </div>
             </div>
 
             <!-- Card 3 -->
-            <div class="col-6 col-md-4 m-auto" data-aos="zoom-in-left">
-              <div class="card h-100 shadow-sm border-0">
-                <div class="card-body text-center">
+            <div class="col-12 col-md-4" data-aos="zoom-in-left">
+              <div class="card h-100 shadow-sm border-0 hover-card">
+                <div class="card-body text-center p-4">
                   <div class="mb-3 text-warning">
                     <i class="fa-solid fa-leaf fa-2x"></i>
                   </div>
-                  <h5 class="card-title fw-bold">តម្លៃរបស់យើង</h5>
-                  <p class="card-text">
+                  <h5 class="fw-bold mb-3">តម្លៃរបស់យើង</h5>
+                  <p class="text-secondary">
                     ចីរភាព ការធ្វើការជាក្រុម និងការច្នៃប្រឌិត
                     គឺជាអ្វីដែលណែនាំយើង ក្នុងការបង្កើតដំណោះស្រាយ
                     ដើម្បីជួយការពារបរិស្ថាន។
@@ -739,7 +735,102 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="bg-footer pt-8 border-top">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="index.html"
+              class="footer-img mb-3 d-flex align-items-center"
+            >
+              <img
+                src="assets/image/green_leaves_round_logo.png"
+                alt="logo"
+                style="width: 50px"
+              />
+              <h4 class="ms-2 fw-bold text-success mb-0 mt-3">កែច្នៃ</h4>
+            </a>
+
+            <p class="text-secondary">
+              "Your seamless platform for event management, where creativity
+              meets efficiency. We simplify planning, coordinate every detail,
+              and bring your vision to life for unforgettable experiences that
+              inspire."
+            </p>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              ព័ត៌មានទំនាក់ទំនង
+            </h5>
+            <p class="mb-1">
+              <i class="bi bi-telephone me-2"></i>+855 12 123 456
+            </p>
+            <p class="mb-1">
+              <i class="bi bi-envelope me-2"></i>
+              <a href="mailto:info@gmail.com" class="text-dark"
+                >info@gmail.com</a
+              >
+            </p>
+            <!-- Social Media -->
+            <div class="d-flex gap-3 mt-3">
+              <a href="#" class="text-success"
+                ><i class="bi bi-facebook fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-twitter-x fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-telegram fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-instagram fs-4"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              តំណភ្ជាប់រហ័ស
+            </h5>
+            <div class="row">
+              <div class="col-6">
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="donation.html" class="footer-link d-block fs-5"
+                      >បរិច្ចាក</a
+                    >
+                  </li>
+                  <li>
+                    <a href="event.html" class="footer-link d-block fs-5"
+                      >ព្រឹត្តិការណ៍</a
+                    >
+                  </li>
+                  <li>
+                    <a href="about.html" class="footer-link d-block fs-5"
+                      >អំពីយើង</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Bottom bar -->
+        <div class="row border-top py-3 mt-4 align-items-center">
+          <div class="col-6 text-start">
+            <p class="mb-0 small text-secondary">© 2024 Recycle</p>
+          </div>
+          <div class="col-6 d-flex justify-content-end gap-3">
+            <a href="#" class="text-secondary small">Privacy Policy</a>
+            <a href="#" class="text-secondary small">FAQs</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- scripts -->
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
