--- a/about.html
+++ b/about.html
@@ -126,8 +126,10 @@
                     >ផលិតផលកែច្នៃ</a
                   >
                 </li>
-                <li class="nav-item active fs-5">
-                  <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
+                <li class="nav-item fs-5">
+                  <a class="nav-link active nav-hover" href="about.html"
+                    >អំពីយើង</a
+                  >
                 </li>
               </ul>
             </div>
@@ -136,7 +138,7 @@
           <!-- Right Side (Search + Notification + Profile + Toggle) -->
           <div class="d-flex align-items-center">
             <!-- Search (Desktop Only) -->
-            <form class="d-flex d-none d-md-block me-3" role="search">
+            <form class="d-flex d-none d-md-block me-3 search-2" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -822,7 +824,7 @@
         <!-- Bottom bar -->
         <div class="row border-top py-3 mt-4 align-items-center">
           <div class="col-6 text-start">
-            <p class="mb-0 small text-secondary">© 2024 Recycle</p>
+            <p class="mb-0 small text-secondary">© 2025 Recycle</p>
           </div>
           <div class="col-6 d-flex justify-content-end gap-3">
             <a href="#" class="text-secondary small">Privacy Policy</a>
