--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search (Mobile Only) -->
-                <form class="d-flex mb-3 d-block d-md-none" role="search">
+                <form class="d-flex mb-3 d-block d-md-none search-1" role="search">
                   <input
                     class="form-control"
                     type="search"
@@ -131,7 +131,7 @@
           <!-- Right Side (Search + Notification + Profile + Toggle) -->
           <div class="d-flex align-items-center">
             <!-- Search (Desktop Only) -->
-            <form class="d-flex d-none d-md-block me-3" role="search">
+            <form class="d-flex d-none d-md-block me-3 search-2" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -238,7 +238,7 @@
               <ul class="dropdown-menu dropdown-menu-end shadow py-0">
                 <li class="border-bottom">
                   <a
-                    href="#"
+                    href="user_profile.html"
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
@@ -690,7 +690,7 @@
         <!-- Bottom bar -->
         <div class="row border-top py-3 mt-4 align-items-center">
           <div class="col-6 text-start">
-            <p class="mb-0 small text-secondary">© 2024 Recycle</p>
+            <p class="mb-0 small text-secondary">© 2025 Recycle</p>
           </div>
           <div class="col-6 d-flex justify-content-end gap-3">
             <a href="#" class="text-secondary small">Privacy Policy</a>
