--- a/event.html
+++ b/event.html
@@ -296,36 +296,22 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="hero-banner banner-event-1 bg-success mt-9">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 col-lg-6">
-              <div
-                class="card d-flex justify-content-center mt-20 p-4 border-0"
-              >
+            <div class="col-12 text-center">
+              <div class="hero-content content-banner p-5">
                 <h1
-                  class="animate__animated animate__fadeInLeft display-4 fw-bold"
+                  class="animate__animated animate__fadeInLeft display-4 fw-bold text-light"
                 >
-                  ព្រឺត្តិការណ៍
-                  <span class="text-success-emphasis align-content-center"
-                    >បៃតង</span
-                  >
-                  & សកម្មភាព
+                  ព្រឹត្តិការណ៍ បៃតង & សកម្មភាព
                 </h1>
-                <p class="animate__animated animate__fadeInLeft fw-bolder fa-3">
+                <p
+                  class="animate__animated animate__fadeInLeft fw-bold fs-5 text-light mt-3"
+                >
                   សកម្មភាពតូចៗ បង្កើតអនាគតធំៗ, ចូលរួមបង្កើតសហគមន៍បៃតងជាមួយគ្នា
                 </p>
               </div>
-            </div>
-            <div
-              class="col-md-12 col-lg-6 py-15 d-flex align-items-center justify-content-center"
-            >
-              <img
-                src="https://i.pinimg.com/1200x/c0/47/f1/c047f14b32e9bbe9c6164069d8c1a4e7.jpg"
-                alt="banner"
-                class="img-fluid animate__animated animate__fadeInRight"
-                style="width: 50%"
-              />
             </div>
           </div>
         </div>
@@ -341,69 +327,74 @@
             និងកាត់បន្ថយបញ្ហាបរិស្ថាន។
           </p>
           <div class="row gy-4">
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+            <!-- Card 1 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/Event4.jpg"
                   class="card-img-top"
                   alt="event1"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event1.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >Forest EcoPreneurs</a
                     >
                   </h5>
                   <p class="card-text">
                     សកម្មភាពនេះមានគោលបំណងក្នុងការបង្កើតឱកាសសម្រាប់អ្នកស្រាវជ្រាវ...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 2 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/Event6.jpg"
                   class="card-img-top"
                   alt="event2"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event2.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >Workshop Art,Culture</a
                     >
                   </h5>
                   <p class="card-text">
                     សិក្ខាសាលានេះផ្តោតលើសិល្បៈ និងវប្បធម៌
-                    ដើម្បីលើកកម្ពស់ការយល់ដឹងអំពីបរិស្ថាន....
+                    ដើម្បីលើកកម្ពស់ការយល់ដឹងអំពីបរិស្ថាន...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 3 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/event7.jpg"
                   class="card-img-top"
                   alt="event3"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event3.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >Plastic Waste</a
                     >
                   </h5>
@@ -411,25 +402,27 @@
                     សកម្មភាពនេះផ្តោតលើការកាត់បន្ថយសំណល់ប្លាស្ទិក
                     និងលើកកម្ពស់ការប្រើ...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ២២​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 4 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/event1.jpg"
                   class="card-img-top"
-                  alt="event3"
+                  alt="event4"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event4.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >ECO Leadership Discovery</a
                     >
                   </h5>
@@ -437,25 +430,27 @@
                     សកម្មភាពនេះផ្តោតលើការអភិវឌ្ឍជំនាញភាពជាអ្នកដឹកនាំបៃតង
                     និងការបង្កើតឱកាស...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ២៥​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 5 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/Event8.jpg"
                   class="card-img-top"
-                  alt="event3"
+                  alt="event5"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event5.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >យុទ្ធនាការ សម្អាតទីក្រុង</a
                     >
                   </h5>
@@ -463,25 +458,27 @@
                     ចូលរួមសម្អាតទីក្រុង ដើម្បីបង្កើនភាពស្អាត
                     និងបង្កើតបរិយាកាសរស់នៅល្អប្រសើរ...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 6 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/event9.jpg"
                   class="card-img-top"
-                  alt="event3"
+                  alt="event6"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event6.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >LCOY</a
                     >
                   </h5>
@@ -489,26 +486,27 @@
                     សកម្មភាព LCOY ផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពារបរិស្ថាន
                     និង...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 7 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/Event2.jpg"
                   class="card-img-top"
-                  alt="event3"
+                  alt="event7"
                 />
-
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event7.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >យុវជនជជែកពិភាក្សា អំពីបរិស្ថាន</a
                     >
                   </h5>
@@ -516,32 +514,34 @@
                     សកម្មភាពនេះផ្តោតលើការចូលរួមរបស់យុវជនក្នុងការពិភាក្សា
                     និងបង្កើតដំណោះស្រា...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-              <div class="card">
+
+            <!-- Card 8 -->
+            <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
+              <div class="card card-event h-100">
                 <img
                   src="assets/Kropum/img/EVENT3.jpg"
                   class="card-img-top"
-                  alt="event3"
+                  alt="event8"
                 />
-                <div class="card-body">
+                <div class="card-body d-flex flex-column">
                   <h5 class="card-title fw-bold">
                     <a
                       href="event8.html"
-                      class="text-decoration-none text-success text-color stretched-link"
+                      class="text-decoration-none text-success stretched-link"
                       >ប្រកួតរូបភាពអំពី Waste of life</a
                     >
                   </h5>
                   <p class="card-text">
                     សកម្មភាពប្រកួតរូបភាពនេះផ្តោតលើការបង្ហាញបញ្ហាសំណល់...
                   </p>
-                  <p class="card-text text-muted">
+                  <p class="card-text text-muted mt-auto">
                     <i class="fa-solid fa-calendar-days text-success"></i> ១៩​
                     ធ្នូរ​ ២០២៥
                   </p>
