--- a/minea.html
+++ b/minea.html
@@ -256,7 +256,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#"
+                  <a class="dropdown-item py-2" href="user_setting.html"
                     ><i class="bi bi-gear"></i
                     ><span class="ms-2">ការកំណត់</span></a
                   >
