--- a/user_setting.html
+++ b/user_setting.html
@@ -37,8 +37,9 @@
   </head>
   <body>
     <header>
-      <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow">
+      <nav class="navbar navbar-expand-lg bg-nav border shadow fixed-top">
         <div class="container">
+          <!-- Logo -->
           <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -47,6 +48,8 @@
               alt="logo"
             />
           </a>
+
+          <!-- Offcanvas Menu -->
           <div
             class="offcanvas offcanvas-start"
             tabindex="-1"
@@ -70,12 +73,13 @@
                 aria-label="Close"
               ></button>
             </div>
+
             <div class="offcanvas-body">
               <ul
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
-                <!-- Search Button -->
-                <form class="d-flex mb-2 d-block d-md-none" role="search">
+                <!-- Search (Mobile Only) -->
+                <form class="d-flex mb-3 d-block d-md-none search-1" role="search">
                   <input
                     class="form-control"
                     type="search"
@@ -83,18 +87,17 @@
                     aria-label="Search"
                   />
                 </form>
+
+                <!-- Menu Items -->
                 <li class="nav-item">
-                  <a
-                    class="nav-link fs-5 nav-hover"
-                    aria-current="page"
-                    href="index.html"
+                  <a class="nav-link fs-5 nav-hover" href="index.html"
                     >ទំព័រដើម</a
                   >
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link nav-hover no-caret dropdown-toggle"
-                    href="index.html"
+                    class="nav-link dropdown-toggle nav-hover no-caret"
+                    href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
@@ -102,9 +105,7 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="#">ឯកសារ</a>
-                    </li>
+                    <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
                     <li>
                       <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
@@ -112,7 +113,7 @@
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link nav-hover no-caret dropdown-toggle"
+                    class="nav-link dropdown-toggle nav-hover no-caret"
                     href="donation.html"
                     role="button"
                     data-bs-toggle="dropdown"
@@ -127,9 +128,7 @@
                       >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="donation.html"
-                        >បរិច្ចាគ
-                      </a>
+                      <a class="dropdown-item" href="donation.html">បរិច្ចាគ</a>
                     </li>
                   </ul>
                 </li>
@@ -139,19 +138,16 @@
                   >
                 </li>
                 <li class="nav-item fs-5">
-                  <a
-                    class="nav-link nav-hover"
-                    aria-current="page"
-                    href="about.html"
-                    >អំពីយើង</a
-                  >
+                  <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="user-profile d-flex align-items-center">
-            <!-- Search Button -->
-            <form class="d-flex d-none d-md-block me-3" role="search">
+
+          <!-- Right Side (Search + Notification + Profile + Toggle) -->
+          <div class="d-flex align-items-center">
+            <!-- Search (Desktop Only) -->
+            <form class="d-flex d-none d-md-block me-3 search-2" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -159,187 +155,141 @@
                 aria-label="Search"
               />
             </form>
-            <!-- notification -->
-            <div class="dropdown pt-2">
+
+            <!-- Notification -->
+            <div class="dropdown me-2">
               <button
-                class="btn dropdown-toggle no-caret"
+                class="btn dropdown-toggle no-caret position-relative"
                 type="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
                 <i class="bi bi-bell fs-5"></i>
                 <span
-                  class="badge bg-danger rounded-circle position-absolute start-50 text-center"
+                  class="badge bg-danger rounded-circle position-absolute start-50 top-0 text-center"
                   style="font-size: 10px"
+                  >4</span
                 >
-                  4
-                </span>
               </button>
+
               <ul
-                class="dropdown-menu dropdown-menu-center dropdown-menu-scroll"
+                class="dropdown-menu dropdown-menu-center dropdown-menu-end p-0 shadow"
+                style="width: 320px; max-height: 350px; overflow-y: auto"
               >
+                <!-- Header -->
                 <div
-                  class="notifi d-flex align-items-center justify-content-between border-bottom px-2"
+                  class="d-flex align-items-center justify-content-between border-bottom px-2 py-2 bg-light"
                 >
-                  <h5>Notification</h5>
+                  <h6 class="mb-0">Notifications</h6>
                   <i class="bi bi-three-dots"></i>
                 </div>
-                <a
-                  href=""
-                  class="text-decoration-none py-2 pe-2 m-0 float-end"
-                  style="font-size: 14px"
-                  >See all</a
-                >
-                <!-- 1 -->
-                <li>
+
+                <!-- Notifications -->
+                <li class="noti-item">
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/img/avata/avatar-1.jpg"
-                        alt=""
+                        src="assets/image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
                       <div class="content ms-3" style="max-width: 220px">
                         <p class="fw-bolder mb-1">Pozz Mao</p>
                         <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Neque, at.
+                          Lorem ipsum dolor sit amet consectetur.
                         </p>
                       </div>
                     </div>
                   </a>
                 </li>
-                <!-- 2 -->
-                <li>
-                  <a class="dropdown-item" href="#">
-                    <div class="py-2 d-flex align-items-center">
-                      <img
-                        src="assets/img/avata/avatar-2.jpg"
-                        alt=""
-                        class="rounded-circle"
-                        style="width: 40px; height: 40px"
-                      />
-                      <div class="content ms-3" style="max-width: 220px">
-                        <p class="fw-bolder mb-1">John Doe</p>
-                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Neque, at.
-                        </p>
+
+                <!-- Collapse Extra Notifications -->
+                <div class="collapse" id="extraNoti">
+                  <li class="noti-item">
+                    <a class="dropdown-item" href="#">
+                      <div class="py-2 d-flex align-items-center">
+                        <img
+                          src="assets/image/avatar-4.jpg"
+                          class="rounded-circle"
+                          style="width: 40px; height: 40px"
+                        />
+                        <div class="content ms-3" style="max-width: 220px">
+                          <p class="fw-bolder mb-1">John Doe</p>
+                          <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
+                            More hidden notifications appear here.
+                          </p>
+                        </div>
                       </div>
-                    </div>
-                  </a>
-                </li>
-                <!-- 3 -->
-                <li>
-                  <a class="dropdown-item" href="#">
-                    <div class="py-2 d-flex align-items-center">
-                      <img
-                        src="assets/img/avata/avatar-3.jpg"
-                        alt=""
-                        class="rounded-circle"
-                        style="width: 40px; height: 40px"
-                      />
-                      <div class="content ms-3" style="max-width: 220px">
-                        <p class="fw-bolder mb-1">Lina</p>
-                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Neque, at.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <!-- 4 -->
-                <li>
-                  <a class="dropdown-item" href="#">
-                    <div class="py-2 d-flex align-items-center">
-                      <img
-                        src="assets/img/avata/avatar-4.jpg"
-                        alt=""
-                        class="rounded-circle"
-                        style="width: 40px; height: 40px"
-                      />
-                      <div class="content ms-3" style="max-width: 220px">
-                        <p class="fw-bolder mb-1">Devid</p>
-                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Neque, at.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <!-- 5 -->
-                <li>
-                  <a class="dropdown-item" href="#">
-                    <div class="py-2 d-flex align-items-center">
-                      <img
-                        src="assets/img/avata/avatar-5.jpg"
-                        alt=""
-                        class="rounded-circle"
-                        style="width: 40px; height: 40px"
-                      />
-                      <div class="content ms-3" style="max-width: 220px">
-                        <p class="fw-bolder mb-1">Dam</p>
-                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Neque, at.
-                        </p>
-                      </div>
-                    </div>
+                    </a>
+                  </li>
+                </div>
+
+                <!-- See More -->
+                <li class="text-center border-top">
+                  <a
+                    class="btn btn-link w-100 py-2 d-block text-decoration-none fw-semibold text-success"
+                    data-bs-toggle="collapse"
+                    href="#extraNoti"
+                    role="button"
+                    aria-expanded="false"
+                    aria-controls="extraNoti"
+                    style="font-size: 14px"
+                  >
+                    See more
                   </a>
                 </li>
               </ul>
             </div>
 
+            <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
                 src="assets/image/avatar-4.jpg"
-                alt=""
+                alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               />
-              <ul class="dropdown-menu dropdown-menu-center py-0">
-                <li class="notifi border-bottom">
+              <ul class="dropdown-menu dropdown-menu-end shadow py-0">
+                <li class="border-bottom">
                   <a
                     href="user_profile.html"
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
                       src="assets/image/avatar-4.jpg"
-                      alt=""
-                      class="avatar dropdown-toggle rounded-circle mx-2"
+                      alt="Avatar"
+                      class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
                     />
-                    <h6 class="mb-0 mt-1">Nazaby</h6>
-                  </a>
-                </li>
-
-                <li>
-                  <a class="dropdown-item py-2" href="user_profile.html">
-                    <i class="bi bi-person-circle"></i>
-                    <span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span>
+                    <h6 class="mb-0">Nazaby</h6>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="user_setting.html">
-                    <i class="bi bi-gear"></i>
-                    <span class="ms-2">ការកំណត់</span>
-                  </a>
+                  <a class="dropdown-item py-2" href="user_profile.html"
+                    ><i class="bi bi-person-circle"></i
+                    ><span class="ms-2">ពត៌មានផ្ទាល់ខ្លួន</span></a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item py-2" href="user_setting.html"
+                    ><i class="bi bi-gear"></i
+                    ><span class="ms-2">ការកំណត់</span></a
+                  >
                 </li>
                 <li class="border-top">
-                  <a class="dropdown-item py-2" href="landing.html">
-                    <i class="bi bi-box-arrow-in-left"></i>
-                    <span class="ms-2">ចាក់ចេញ</span>
-                  </a>
+                  <a class="dropdown-item py-2" href="landing.html"
+                    ><i class="bi bi-box-arrow-in-left"></i
+                    ><span class="ms-2">ចាក់ចេញ</span></a
+                  >
                 </li>
               </ul>
             </div>
+
+            <!-- Mobile Toggler -->
             <button
-              class="navbar-toggler border-0 shadow-none fs-4"
+              class="navbar-toggler border-0 shadow-none fs-4 ms-2"
               type="button"
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasNavbar"
