--- a/user_profile.html
+++ b/user_profile.html
@@ -68,7 +68,10 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search (Mobile Only) -->
-                <form class="d-flex mb-3 d-block d-md-none search-1" role="search">
+                <form
+                  class="d-flex mb-3 d-block d-md-none search-1"
+                  role="search"
+                >
                   <input
                     class="form-control"
                     type="search"
@@ -262,7 +265,7 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item py-2" href="#"
+                  <a class="dropdown-item py-2" href="user_setting.html"
                     ><i class="bi bi-gear"></i
                     ><span class="ms-2">ការកំណត់</span></a
                   >
@@ -291,7 +294,6 @@
         </div>
       </nav>
     </header>
-
     <main class="container-fluid mt-7 pt-4">
       <div class="row">
         <!-- Sidebar for md+ only -->
@@ -312,30 +314,30 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <i class="bi bi-person me-2 text-success"></i>
-              <a href="#" class="text-decoration-none text-dark">Overview</a>
+              <a href="#" class="text-decoration-none text-dark">សង្ខេប</a>
             </li>
             <li class="list-group-item">
               <i class="bi bi-clock-history me-2 text-success"></i>
               <a href="#activity" class="text-decoration-none text-dark"
-                >Activity</a
+                >សកម្មភាព</a
               >
             </li>
             <li class="list-group-item">
               <i class="bi bi-cart me-2 text-success"></i>
               <a href="#purchase" class="text-decoration-none text-dark"
-                >Purchase</a
+                >ទិញទំនិញ</a
               >
             </li>
             <li class="list-group-item">
               <i class="bi bi-gear me-2 text-success"></i>
               <a href="user_setting.html" class="text-decoration-none text-dark"
-                >Settings</a
+                >ការកំណត់</a
               >
             </li>
             <li class="list-group-item border-top">
               <i class="bi bi-box-arrow-right me-2 text-danger"></i>
               <a href="landing.html" class="text-decoration-none text-danger"
-                >Logout</a
+                >ចាកចេញ</a
               >
             </li>
           </ul>
@@ -359,7 +361,7 @@
           <section id="profile-info">
             <div class="card shadow-sm mb-4">
               <div class="card-header bg-success text-white">
-                <h5 class="mb-0">Profile Information</h5>
+                <h5 class="mb-0">ព័ត៌មានផ្ទាល់ខ្លួន</h5>
               </div>
               <div class="card-body">
                 <div class="row mb-3">
@@ -380,7 +382,7 @@
                 </div>
                 <div class="text-end">
                   <a href="user_setting.html" class="btn btn-success">
-                    <i class="fas fa-edit me-2"></i>Edit Profile
+                    <i class="fas fa-edit me-2"></i>កែសម្រួល
                   </a>
                 </div>
               </div>
@@ -391,21 +393,21 @@
           <section id="activity">
             <div class="card shadow-sm mb-4">
               <div class="card-header bg-success text-white">
-                <h5 class="mb-0">Recent Activity</h5>
+                <h5 class="mb-0">សកម្មភាពថ្មីៗ</h5>
               </div>
               <div class="card-body">
                 <ul class="timeline list-unstyled">
                   <li class="mb-3">
-                    <span class="fw-bold">📦 Posted a new item</span>
-                    <small class="text-muted d-block">2 hours ago</small>
+                    <span class="fw-bold">បង្ហោះអ្វីថ្មី</span>
+                    <small class="text-muted d-block">2 ម៉ោងមុន</small>
                   </li>
                   <li class="mb-3">
-                    <span class="fw-bold">🖼️ Updated profile picture</span>
-                    <small class="text-muted d-block">1 day ago</small>
+                    <span class="fw-bold">កែប្រែរូប Profile</span>
+                    <small class="text-muted d-block">1 ថ្ងៃមុន</small>
                   </li>
                   <li class="mb-3">
-                    <span class="fw-bold">🛒 Made a purchase</span>
-                    <small class="text-muted d-block">3 days ago</small>
+                    <span class="fw-bold">ទិញទំនិញ</span>
+                    <small class="text-muted d-block">3 ថ្ងៃមុន</small>
                   </li>
                 </ul>
               </div>
@@ -418,7 +420,7 @@
               <div
                 class="card-header bg-success text-white custom-card-header bg-success"
               >
-                <h5 class="mb-0"><i class="bi bi-cart me-2"></i>Purchase</h5>
+                <h5 class="mb-0"><i class="bi bi-cart me-2"></i>ទិញទំនិញ</h5>
               </div>
               <div class="card-body">
                 <!-- Tabs -->
@@ -438,7 +440,7 @@
                       aria-controls="pending"
                       aria-selected="true"
                     >
-                      Pending
+                      រង់ចាំ
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -452,7 +454,7 @@
                       aria-controls="success"
                       aria-selected="false"
                     >
-                      Successful
+                      ជោគជ័យ
                     </button>
                   </li>
                 </ul>
@@ -513,12 +515,12 @@
           <section id="security">
             <div class="card shadow-sm mb-4">
               <div class="card-header bg-success text-white">
-                <h5 class="mb-0">Account Security</h5>
+                <h5 class="mb-0">សុវត្ថិភាពគណនី</h5>
               </div>
               <div class="card-body">
                 <p>
-                  <i class="bi bi-shield-lock me-2 text-success"></i>Password
-                  last changed: <strong>2 months ago</strong>
+                  <i class="bi bi-shield-lock me-2 text-success"></i
+                  >ពាក្យសម្ងាត់បានផ្លាស់ប្តូរចុងក្រោយ៖ <strong>២ ខែមុន</strong>
                 </p>
                 <p>
                   <i class="bi bi-phone me-2 text-success"></i>Two-Factor
@@ -531,7 +533,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#securityModal"
                   >
-                    Manage Security
+                    គ្រប់គ្រងសន្តិសុខ
                   </button>
                 </div>
               </div>
@@ -548,7 +550,7 @@
                 <div class="modal-content">
                   <div class="modal-header bg-success text-white">
                     <h5 class="modal-title" id="securityModalLabel">
-                      <i class="bi bi-shield-lock me-2"></i>Device Login
+                      <i class="bi bi-shield-lock me-2"></i>ឧបករណ៍ចូលប្រើប្រាស់
                     </h5>
                     <button
                       type="button"
@@ -559,7 +561,7 @@
                   </div>
                   <div class="modal-body">
                     <p class="mb-3">
-                      These devices are currently logged in to your account:
+                      ឧបករណ៍ទាំងនេះបានចូលដំណើរការក្នុងគណនីរបស់អ្នក៖
                     </p>
                     <ul class="list-group">
                       <!-- Device 1 -->
@@ -569,7 +571,7 @@
                         <div>
                           <strong>Windows PC</strong> - Phnom Penh, Cambodia<br />
                           <small class="text-muted"
-                            >Last active: 1 hour ago</small
+                            >សកម្មចុងក្រោយ៖ ១ ម៉ោងមុន</small
                           >
                         </div>
                         <div class="mt-2 mt-md-0">
@@ -579,7 +581,7 @@
                             data-bs-toggle="modal"
                             data-bs-target="#successModal"
                           >
-                            Logout
+                            ចាកចេញ
                           </button>
                         </div>
                       </li>
@@ -590,7 +592,7 @@
                         <div>
                           <strong>iPhone 14</strong> - Phnom Penh, Cambodia<br />
                           <small class="text-muted"
-                            >Last active: 2 days ago</small
+                            >សកម្មចុងក្រោយ៖ ២ ថ្ងៃមុន</small
                           >
                         </div>
                         <div class="mt-2 mt-md-0">
@@ -600,7 +602,7 @@
                             data-bs-toggle="modal"
                             data-bs-target="#successModal"
                           >
-                            Logout
+                            ចាកចេញ
                           </button>
                         </div>
                       </li>
@@ -611,7 +613,7 @@
                         <div>
                           <strong>MacBook Pro</strong> - Phnom Penh, Cambodia<br />
                           <small class="text-muted"
-                            >Last active: 5 days ago</small
+                            >សកម្មចុងក្រោយៈ ៥ ថ្ងៃមុន</small
                           >
                         </div>
                         <div class="mt-2 mt-md-0">
@@ -621,7 +623,7 @@
                             data-bs-toggle="modal"
                             data-bs-target="#successModal"
                           >
-                            Logout
+                            ចាកចេញ
                           </button>
                         </div>
                       </li>
@@ -633,7 +635,7 @@
                       class="btn btn-secondary rounded-3"
                       data-bs-dismiss="modal"
                     >
-                      Close
+                      បិទ
                     </button>
                   </div>
                 </div>
@@ -651,7 +653,7 @@
                 <div class="modal-content border-success">
                   <div class="modal-header bg-success text-white">
                     <h5 class="modal-title" id="successModalLabel">
-                      <i class="bi bi-check-circle me-2"></i>Success
+                      <i class="bi bi-check-circle me-2"></i>ជោគជ័យ
                     </h5>
                     <button
                       type="button"
@@ -661,7 +663,7 @@
                     ></button>
                   </div>
                   <div class="modal-body text-center">
-                    Device logged out successfully!
+                    ឧបករណ៍បានចាកចេញដោយជោគជ័យ!
                   </div>
                   <div class="modal-footer justify-content-center">
                     <button
