--- a/feedback.html
+++ b/feedback.html
@@ -103,9 +103,9 @@
               <a class="nav-link active fw-semibold" href="feedback.html"
                 ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
               >
-              <a class="nav-link fw-semibold" href="#"
+              <!-- <a class="nav-link fw-semibold" href="#"
                 ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
-              >
+              > -->
               <a class="nav-link fw-semibold" href="setting.html"
                 ><i class="bi bi-gear me-2"></i> ការកំណត់</a
               >
