--- a/Documents.html
+++ b/Documents.html
@@ -22,7 +22,7 @@
       <div class="row align-items-center">
         <!-- Text Left -->
         <div class="col-md-6">
-          <h4>គុណសម្បត្តិនៃការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម</h4>
+          <h4 class="text-success">គុណសម្បត្តិនៃការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម</h4>
           <p>
             មានគុណសម្បត្តិសំខាន់ៗជាច្រើនចំពោះការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម។ ទីមួយ
             វាជួយជាមួយនឹងកត្តាស្ថេរភាព ដោយសារវាកាត់បន្ថយការពឹងផ្អែកលើផ្លាស្ទិចព្រហ្មចារី ដែលជួយសន្សំសំចៃធនធានដ៏មានតម្លៃ
@@ -53,7 +53,7 @@
 
         <!-- Text Right -->
         <div class="col-md-6">
-          <h4>របៀបជ្រើសរើសសម្ភារៈដែលត្រឹមត្រូវសម្រាប់ផ្នែកប្លាស្ទិករបស់អ្នក។</h4>
+          <h4 class="text-success">របៀបជ្រើសរើសសម្ភារៈដែលត្រឹមត្រូវសម្រាប់ផ្នែកប្លាស្ទិករបស់អ្នក។</h4>
           <p>
             ការជ្រើសរើសសម្ភារៈប្លាស្ទិកដែលសមរម្យសម្រាប់គម្រោងរបស់អ្នកនឹងតែងតែអាស្រ័យលើទិដ្ឋភាពជាច្រើនដែលមានសារៈសំខាន់ចំពោះការប្រើប្រាស់សម្ភារៈដែលបានគ្រោងទុក។
             ព្យាយាមដូចដែលខ្ញុំអាចធ្វើបាន ខ្ញុំបាននិយាយវាពីមុន ហើយខ្ញុំនឹងនិយាយវាម្តងទៀត៖
