--- a/frist_doc.html
+++ b/frist_doc.html
@@ -48,12 +48,12 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="Documents.html" class="text-decoration-none text-dark">
+            <a href="Plastic_doc.html" class="text-decoration-none text-dark">
               <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/img01.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
+                <img src="assets/minea/img/maxresdefault.jpg" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
                 <div class="card-body">
                   <p class="card-text">
-                    គុណសម្បត្តិនៃការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម
+                    តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
                   </p>
                 </div>
               </div>
@@ -84,7 +84,7 @@
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
-            <a href="Documents.html" class="text-decoration-none text-dark">
+            <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
               <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
                 <img src="assets/minea/img/img01.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
                 <div class="card-body">
