--- a/video1.html
+++ b/video1.html
@@ -85,11 +85,10 @@
             <div class="card" style="height: 170px; cursor: pointer;">
               <div class="card-body d-flex">
                 <div class="card-img">
-                  <img src="assets/minea/img/img01.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
+                  <img src="assets/minea/img/v_img01.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
                 </div>
                 <p class="card-text ms-3">
-                  ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                  ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                  សិប្បកម្មកែច្នៃកាកសំណល់ផ្លាស្ទីកទៅជាឥដ្ឋអេកូមួយកន្លែងនៅក្រុងតាខ្មៅកំពុងទទួលបានការគាំទ្រខ្លាំងពីអតិថិជន
                 </p>
               </div>
             </div>
@@ -99,11 +98,10 @@
             <div class="card mt-3" style="height: 170px; cursor: pointer;">
               <div class="card-body d-flex">
                 <div class="card-img">
-                  <img src="assets/minea/img/img02.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
+                  <img src="assets/minea/img/v_img02.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
                 </div>
                 <p class="card-text ms-3">
-                  ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                  ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                  វីធីធ្វើធុងសំរាមកែច្នៃពីដបទឹកសុទ្ថ
                 </p>
               </div>
             </div>
@@ -113,11 +111,10 @@
             <div class="card mt-3" style="height: 170px; cursor: pointer;">
               <div class="card-body d-flex">
                 <div class="card-img">
-                  <img src="assets/minea/img/img03.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
+                  <img src="assets/minea/img/v_img03.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
                 </div>
                 <p class="card-text ms-3">
-                  ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                  ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                  តើ​ការ​កែច្នៃ​កែច្នៃ​មាន​ប្រយោជន៍​អ្វី​ខ្លះ​ក្នុង​ជីវិត​ប្រចាំ​ថ្ងៃ​របស់​យើង?
                 </p>
               </div>
             </div>
@@ -127,11 +124,10 @@
             <div class="card mt-3" style="height: 170px; cursor: pointer;">
               <div class="card-body d-flex">
                 <div class="card-img">
-                  <img src="assets/minea/img/img02.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
+                  <img src="assets/minea/img/v_img04.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
                 </div>
                 <p class="card-text ms-3">
-                  ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                  ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                  ការយល់ដឹងអំពីឧស្សាហកម្មកែច្នៃផ្លាសិ្ចច
                 </p>
               </div>
             </div>
